--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,11 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="#">Home</a>
+                            href="{% url 'home' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'home' %}">Profile</a>
                     </li>
 
                 </ul>
@@ -63,7 +67,7 @@
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">
             {% block copyright %}
-                Made by Laura Hall
+                Copyright 2024 Laura Hall
             {% endblock copyright %}
         </p>
         <p class="m-0 text-center text-white">Follow me: <i class="fab fa-facebook-square ms-3"></i>
