--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
+    <footer class="footer mt-auto py-3 main-bg">
         <p class="m-0 text-center text-white">
             {% block copyright %}
                 Copyright 2024 Laura Hall
