--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -18,7 +18,7 @@
                                     <p class="author">Author: {{ review.user }}</p>
                                 </div>
                             </div>
-                            <a href="{% url 'review_detail' post.slug %}" class="post-link">
+                            <a href="{% url 'review_detail' review.slug %}" class="post-link">
                                 <h2 class="card-title">{{ review.title }}</h2>
                                 <p class="card-text">{{ review.excerpt }}</p>
                             </a>
