Add: delete comment functionality to review app

--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% block content %}
-{% load static %}
+{% extends 'base.html' %} {% block content %} {% load static %} 
 {% load crispy_forms_tags %}
 
 <div class="masthead">
@@ -28,7 +27,6 @@
         <!-- Use the | safe filter inside the template tags -->
         <p>Rating {{ review.rating }} out of 5.</p>
         <p class="card-text">{{ review.content | safe }}</p>
-
       </div>
     </div>
   </div>
@@ -64,9 +62,13 @@
           </div>
           {% if not comment.approved and comment.user == user %}
           <p class="approval">This comment is awaiting approval</p>
-          {% endif %}
-          {% if user.is_authenticated and comment.user == user %}
-          <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
+          {% endif %} {% if user.is_authenticated and comment.user == user %}
+          <button class="btn btn-delete" comment_id="{{ comment.id }}">
+            Delete
+          </button>
+          <button class="btn btn-edit" comment_id="{{ comment.id }}">
+            Edit
+          </button>
           {% endif %}
         </div>
         <!-- Our for loop ends here -->
@@ -93,8 +95,28 @@
   </div>
 </div>
 
-{% endblock content %}
+<!-- Delete confirmation modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete your comment? This action cannot be
+        undone.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+        <a id="deleteConfirm" href="#" class="btn btn-danger">Delete</a>
+      </div>
+    </div>
+  </div>
+</div>
 
-{% block extras %}
+{% endblock content %} {% block extras %}
 <script src="{% static 'js/comments.js' %}"></script>
 {% endblock %}
