--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -14,11 +14,11 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
-                                {% if "placeholder" in post.featured_image.url %}
+                                {% if "placeholder" in review.book_cover.url %}
                                 <img class="card-img-top" src="{% static 'images/default.jpg' %}"
                                   alt="placeholder image">
                                 {% else %}
-                                <img class="card-img-top" src=" {{ review.featured_image.url }}"
+                                <img class="card-img-top" src=" {{ review.book_cover.url }}"
                                   alt="{{ review.title }}">
                                 {% endif %}
                                 <div class="image-flash">
