Fix: cloudinary book_cover images now showing in index

--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %} {% load static %} 
+{% extends 'base.html' %} {% block content %} {% load static %}
+{% load cloudinary %}
 {% load crispy_forms_tags %}
 
 <div class="masthead">
@@ -13,7 +14,11 @@
         </p>
       </div>
       <div class="d-none d-md-block col-md-6 masthead-image">
-        <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder" />
+        {% if review.book.book_cover %}
+        {% cloudinary review.book.book_cover class="scale" alt=review.title %}
+        {% else %}
+        <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder image">
+        {% endif %}
       </div>
     </div>
   </div>
