Add: dropdown menu added to navbar in base.html, create tbr app

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,13 +47,16 @@
                             href="{% url 'home' %}">Home</a>
                     </li>
                     {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'account_logout' %}">Logout</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'home' %}">Profile</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Profile
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="#">View Profile</a></li>
+                          <li><a class="dropdown-item" href="#">Add Book</a></li>
+                          <li><a class="dropdown-item" href="#">Add Review</a></li>
+                          <li><a class="dropdown-item" href="#">Log Out</a></li>
+                        </ul>
                     </li>
                     {% else %}
                     <li class="nav-item">
