--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <!-- index.html content starts here -->
-<<div class="container-fluid">
+<div class="container-fluid">
     <div class="row">
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
