--- a/review/templates/review/add_review.html
+++ b/review/templates/review/add_review.html
@@ -10,13 +10,11 @@
     <div class="col-12 col-md-6 my-5">
       {% if user.is_authenticated %}
       <h2>Write a Review!</h2>
-      <p>Posting as: {{ user.username }}</p>
       <p>Write a review for a LitRPG book.</p>
       <form method="post">
         {{ review_form | crispy }}
         {% csrf_token %}
-        <button class="btn btn-secondary"
-          type="submit">Submit</button>
+        <button class="btn btn-secondary" type="submit">Submit</button>
       </form>
       {% else %}
       <p>Log in to write a review.</p>
@@ -25,3 +23,10 @@
   </div>
 </div>
 {% endblock content %}
+{% block extras %}
+<link rel="stylesheet" href="{% static 'django_summernote/summernote.css' %}">
+<script src="{% static 'django_summernote/summernote.js' %}"></script>
+{% endblock %}
+
+
+
