--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <li><a class="dropdown-item" href="">View Profile</a></li>
-                          <li><a class="dropdown-item" href="#">Add Book</a></li>
+                          <li><a class="dropdown-item" href="{% url 'add_book' %}">Add Book</a></li>
                           <li><a class="dropdown-item" href="{% url 'add_review' %}">Add Review</a></li>
                           <li><a class="dropdown-item" href="#">Log Out</a></li>
                         </ul>
