Add: TBR List to navbar in base.html and user feedback messages to messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                           Profile
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="">View Profile</a></li>
+                          <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
                           <li><a class="dropdown-item" href="{% url 'add_book' %}">Add Book</a></li>
                           <li><a class="dropdown-item" href="{% url 'add_review' %}">Add Review</a></li>
                           <li><a class="dropdown-item" href="#">Log Out</a></li>
