Style: profile in navbar to user menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Profile
+                          User Menu
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
