--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,18 +1,22 @@
+/* Global Settings */
 
-body {
-    background-color: #1C1A32;
-    color: fff;
-
+:root {
+    --primary-color: #587ffc;
+    --secondary-color: #ff8692;
+    --headings: #92A5FD;
+    --background-color: #1E1E5D;
+    --text-color: #E5eaf5;
 }
 
-p {
-    color: #E9BCB9;
+body {
+    background-color: var(--background-color);
+
 }
 
 /* Slogan */
 .slogan-container {
     height: 600px;
-    background: url("static/images/default.jpg") no-repeat center center/cover;
+    background: url("{% static 'images/default.jpg' %}") no-repeat center center/cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -26,18 +30,17 @@ p {
   /* Jumbotron */
   
   .jumbotron {
-    background-color: rgba(133, 166, 166, 0.8);
+    background-color: rgba(9, 12, 125, 0.8);
   }
   
   .jumbotron h1 {
-    font-family: "Montserrat", sans-serif;
-    color: #22130c;
+    color: var(--headings);
     font-weight: bold;
     margin-bottom: 20px;
   }
   
   .jumbotron h4 {
-    color: #22130c;
+    color: var(--headings);
     margin-top: 20px;
   }
 
