--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,75 +1,41 @@
-/* Global Settings */
-
-:root {
-    --primary-color: #587ffc;
-    --secondary-color: #ff8692;
-    --headings: #92A5FD;
-    --background-color: #1E1E5D;
-    --text-color: #E5eaf5;
-}
 
 body {
-    background-color: var(--background-color);
-
+    background-color: #1F1D5E;
+    color: #E2E5F6;
 }
 
-/* Slogan */
-.slogan-container {
-    height: 600px;
-    background: url("{% static 'images/default.jpg' %}") no-repeat center center/cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-  }
-  
-  /* Jumbotron */
-  
-  .jumbotron {
-    background-color: rgba(9, 12, 125, 0.8);
-  }
-  
-  .jumbotron h1 {
-    color: var(--headings);
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .jumbotron h4 {
-    color: var(--headings);
-    margin-top: 20px;
-  }
-
-.brand {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #F09D57;
+h1, h2, h3, h4, h5, h6 {
+    color: #597FFC;
 }
 
-.thin {
-    font-weight: 300;
+p {
+    color: #E2E5F6;
+}
+
+.nav-links {
+    color: #91A5FE;
+}
+
+.nav-links:hover,
+.nav-links:active {
+    color:#FF8695;
+}
+
+.light-bg {
+    background-color: #91A5FE;
 }
 
 .dark-bg {
-    background-color: #44174E;
+    background-color: #597FFC;
 }
 
 .main-bg {
-    background-color: #1C1A32;;
+    background-color: #1F1D5E;
 }
 
 .card {
-    border: none;
+    border: #E2E5F6 1px solid;
     background-color: transparent;
-}
-
-.card-body {
-    height:300px;
 }
 
 .image-container {
@@ -81,7 +47,7 @@ body {
     bottom: 5%;
     min-width: 30%;
     left: -2px;
-    background-color: #682149;
+    background-color: #188181;
 }
 
 .scale {
@@ -90,7 +56,7 @@ body {
 }
 
 .author {
-    color: #F09D57;
+    color: white;
     margin: 4px;
     text-transform: uppercase;
 }
@@ -105,8 +71,8 @@ body {
 }
 
 .masthead-text {
-    background-color: #44174E;
-    color:#F09D57;
+    background-color: #445261;
+    color: white;
     position: relative;
 }
 
@@ -122,21 +88,26 @@ body {
     right: 90%;
     height: 100%;
     width: 150%;
-    background: #44174E;
+    background: #445261;
     -webkit-transform: skew(15deg);
     -moz-transform: skew(15deg);
     transform: skew(15deg);
     z-index: 100;
 }
 
+
+.profile-image {
+    width: 75%;
+}
+
 .post-link {
     text-decoration: none;
-    color: #E9BCB9;
+    color: #445261;
 }
 
 .post-link:hover,
 .page-link {
-    color: #F09D57;
+    color: #E84610;
 }
 
 .post-title {
@@ -146,19 +117,19 @@ body {
 
 .post-subtitle {
     margin-left: 5%;
-    color: #F09D57
+    color: lightgray;
 }
 
 .btn-signup,
 .btn-edit {
-    background-color: #F09D57;
-    color: #1C1A32;
+    background-color: #188181;
+    color: #fff;
 }
 
 .btn-signup:hover,
 .btn-signup:active {
-    background-color: #1C1A32;
-    color: #44174E;
+    background-color: #fff;
+    color: #23BBBB;
 }
 
 .link {
