--- a/templates/base.html
+++ b/templates/base.html
@@ -37,17 +37,15 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg main-bg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">LitRPG Library</span></a>
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="{%static 'images/logo.webp' %}" alt="LitRPG Library Logo" width="250" height="70">
+              </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'home' %}">Home</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'review_list' %}">Reviews</a>
                     </li>
@@ -57,9 +55,9 @@
                           User Menu
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
                           <li><a class="dropdown-item" href="{% url 'add_book' %}">Add Book</a></li>
                           <li><a class="dropdown-item" href="{% url 'add_review' %}">Add Review</a></li>
+                          <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
                           <li><a class="dropdown-item" href="#">Log Out</a></li>
                         </ul>
                     </li>
