--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,17 @@
 {% load static %}
 {% load cloudinary %}
 {% block content %}
-<div class="container-fluid slogan-container">
-    <div class="row">
-      <div class="col-12">
-        <section class="jumbotron text-center">
-          <h1>LitRPG</h1>
-          <hr class="text-center block-divider">
-          <h4>
-            Home of everything LitRPG.
-          </h4>
-        </section>
+<header class="header">
+  <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 header-image">
+            <h1>LitRPG Library</h1>
+        </div>
+          <!-- Image Section -->
+          <div class="col-md-6 header-image">
+              <img src="{%static 'images/hero.gif' %}" alt="Header Image">
+          </div>
       </div>
-    </div>
   </div>
+</header>
 {% endblock %}
