--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,26 +1,142 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+/* General Styles */
 
 body {
     background-color: #1F1D5E;
     color: #E2E5F6;
+    font-family: 'Raleway', Arial, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: #597FFC;
+    font-family: 'Cabin', Arial, sans-serif;
 }
 
 p {
     color: #E2E5F6;
 }
 
-.nav-link {
+.text-muted {
+    font-weight: 200;
+}
+
+/* Navbar */
+
+.nav {
+    background-color: #1F1D5E;
+}
+
+.navbar {
+    margin-bottom: 0;
+    width: 100%;
+    border: 0;
+    z-index: 1;
+}
+
+.navbar .navbar-toggler {
+    color: #597FFC;
+}
+
+.nav {
+    text-align: center;
+}
+
+.navbar-toggler {
+    float: none;
+    margin-right: 0
+}
+
+.navbar-toggler:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.gravity-ui--bars {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23597FFC' fill-rule='evenodd' d='M1.25 3.25A.75.75 0 0 1 2 2.5h12A.75.75 0 0 1 14 4H2a.75.75 0 0 1-.75-.75m0 4.75A.75.75 0 0 1 2 7.25h12a.75.75 0 0 1 0 1.5H2A.75.75 0 0 1 1.25 8M2 12a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z' clip-rule='evenodd'/%3E%3C/svg%3E");
+  }
+
+.dropdown-menu {
+    background-color: #1F1D5E;
+    color: #E2E5F6;
+}
+
+.nav-link, .dropdown-item {
     color: #91A5FE;
+    font-weight: bold;
 }
 
 .nav-link:hover,
-.nav-link:active {
-    color:#FF8695;
+.nav-link:active,
+.dropdown-item:hover,
+.dropdown-item:active {
+    color: #FF8695; 
 }
 
+.dropdown-item:hover,
+.dropdown-item:active {
+    background-color: #597FFC;
+}
+
+/* Nav Spin */
+.navbar-toggler .icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    background-color: #597FFC;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.navbar-toggler:hover .icon-bar {
+    background-color: #FF8695; 
+}
+
+
+.navbar-toggler .top-bar {
+    transform: rotate(0);
+}
+
+.navbar-toggler .middle-bar {
+    opacity: 1;
+}
+
+.navbar-toggler .bottom-bar {
+    transform: rotate(0);
+}
+
+.navbar-toggler:not(.collapsed) .top-bar {
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
+}
+
+.navbar-toggler:not(.collapsed) .middle-bar {
+    opacity: 0;
+}
+
+.navbar-toggler:not(.collapsed) .bottom-bar {
+    transform: rotate(-45deg);
+    transform-origin: 10% 90%;
+}
+
+/* bg */
 .light-bg {
     background-color: #91A5FE;
 }
@@ -37,7 +153,9 @@ p {
 .header-video {
     position: relative;
     overflow: hidden;
-    height: 500px; /* Adjust height as needed */
+    width: 100%; /* Full width of the container */
+    height: auto;
+    aspect-ratio: 1/ 1; /* Keeps it proportional */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -47,15 +165,19 @@ p {
     position: absolute;
     top: 0;
     left: 0;
-    width: 500px;
-    height: 500px;
-    object-fit: cover; /* Ensures the video covers the area */
-    z-index: -1; /* Places the video behind other content */
+    width: 100%; /* Ensure it fills the container */
+    height: 100%; /* Ensure it fills the container */
+    object-fit: cover; /* Maintains aspect ratio and covers the container */
 }
 
 .card {
     border: #E2E5F6 1px solid;
     background-color: transparent;
+}
+
+.index-card {
+    border: #91A5FE 1px solid;
+    background-color: rgba(51, 49, 114 0.2);
 }
 
 .image-container {
@@ -113,11 +235,6 @@ p {
     -moz-transform: skew(15deg);
     transform: skew(15deg);
     z-index: 100;
-}
-
-
-.profile-image {
-    width: 75%;
 }
 
 .post-link {
@@ -187,4 +304,79 @@ p {
 
 .approval {
     color: rgb(222, 146, 168);
+}
+
+@media (max-width: 767px) {
+    .navbar .container-fluid {
+        flex-direction: column;
+    }
+    .navbar .container-fluid > div:first-child {
+        width: 100%;
+    }
+    .navbar-brand {
+        margin-right: 0;
+    }
+    .navbar-toggler {
+        margin-left: auto;
+    }
+}
+
+@media (min-width: 768px) {
+    .navbar .navbar-brand {
+        position: relative; 
+        margin-left: 0;
+    }
+
+    .navbar-text {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start; /* Align to the left or you can adjust as needed */
+    }
+    
+    .navbar-text p {
+        margin: 0; /* Remove default margin */
+        white-space: nowrap; /* Prevent the text from wrapping */
+    }
+
+    .header {
+        display: flex;
+        flex-direction: row; /* Keeps layout horizontal */
+        justify-content: flex-start; /* Align items to the left */
+        align-items: center; /* Center items vertically */
+        text-align: left;
+    }
+
+    .header .container {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        margin-right: 0;
+        padding-right: 0;
+    }
+
+    .header .row {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    .header .col-md-6 {
+        width: 50%;
+        padding: 0 15px;
+    }
+
+    .header-video {
+        width: 100%; /* Ensure video container takes up full space */
+        max-width: 500px; /* Optional: limit max width of the video */
+        aspect-ratio: 1 / 1; /* Adjust the aspect ratio of the video */
+        object-fit: cover; /* Ensure the video covers the container properly */
+       
+    }
+
+    .text-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: left;
+    }
 }
