--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,70 +1,163 @@
-/* Global Settings */
-
-:root {
-    --primary-color: #587ffc;
-    --secondary-color: #ff8692;
-    --headings: #92A5FD;
-    --background-color: #1E1E5D;
-    --text-color: #E5eaf5;
-}
-
 body {
-    background-color: var(--background-color);
-
-}
-h1, h2, h3, h4, h5, h6 {
-    color: var(--headings)
+    background-color: #1F1D5E;
+    color: #E2E5F6;
 }
 
-/* Slogan */
-.slogan-container {
-    height: 600px;
-    background: url("{% static 'images/default.jpg' %}") no-repeat center center/cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #597FFC;
+}
+
+p {
+    color: #E2E5F6;
+}
+
+/* Navbar */
+
+.nav {
+    background-color: #1F1D5E;
+}
+
+.navbar {
+    margin-bottom: 0;
+    width: 100%;
+    border: 0;
+    z-index: 1;
+}
+
+.navbar .navbar-toggler {
+    color: #597FFC;
+}
+
+.nav {
+    text-align: center;
+}
+
+.navbar-toggler {
+    float: none;
+    margin-right: 0
+}
+
+.navbar-toggler:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.gravity-ui--bars {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23597FFC' fill-rule='evenodd' d='M1.25 3.25A.75.75 0 0 1 2 2.5h12A.75.75 0 0 1 14 4H2a.75.75 0 0 1-.75-.75m0 4.75A.75.75 0 0 1 2 7.25h12a.75.75 0 0 1 0 1.5H2A.75.75 0 0 1 1.25 8M2 12a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z' clip-rule='evenodd'/%3E%3C/svg%3E");
+  }
+
+.dropdown-menu {
+    background-color: #1F1D5E;
+    color: #E2E5F6;
+}
+
+.nav-link, .dropdown-item {
+    color: #91A5FE;
+}
+
+.nav-link:hover,
+.nav-link:active,
+.dropdown-item:hover,
+.dropdown-item:active {
+    color: #FF8695;
+}
+/* Nav Spin */
+.navbar-toggler .icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    background-color: #597FFC;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.navbar-toggler:hover .icon-bar {
+    background-color: #FF8695; 
+}
+
+
+.navbar-toggler .top-bar {
+    transform: rotate(0);
+}
+
+.navbar-toggler .middle-bar {
+    opacity: 1;
+}
+
+.navbar-toggler .bottom-bar {
+    transform: rotate(0);
+}
+
+.navbar-toggler:not(.collapsed) .top-bar {
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
+}
+
+.navbar-toggler:not(.collapsed) .middle-bar {
+    opacity: 0;
+}
+
+.navbar-toggler:not(.collapsed) .bottom-bar {
+    transform: rotate(-45deg);
+    transform-origin: 10% 90%;
+}
+
+/* bg */
+.light-bg {
+    background-color: #91A5FE;
+}
+
+.dark-bg {
+    background-color: #597FFC;
+}
+
+.main-bg {
+    background-color: #1F1D5E;
+}
+
+/* Hero Video */
+.header-video {
+    position: relative;
+    overflow: hidden;
+    height: 500px;
+    /* Adjust height as needed */
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-  }
-  
-  /* Jumbotron */
-  
-  .jumbotron {
-    background-color: rgba(9, 12, 125, 0.8);
-  }
-  
-  .jumbotron h1 {
-    color: var(--headings);
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .jumbotron h4 {
-    color: var(--headings);
-    margin-top: 20px;
-  }
-
-.brand {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #F09D57;
 }
 
-.thin {
-    font-weight: 300;
+.bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
+    /* Ensures the video covers the area */
+    z-index: -1;
+    /* Places the video behind other content */
 }
 
 .card {
-    border: none;
+    border: #E2E5F6 1px solid;
     background-color: transparent;
 }
 
-.card-body {
-    height:300px;
+.index-card {
+    border: #91A5FE 1px solid;
+    background-color: rgba(51, 49, 114 0.2);
 }
 
 .image-container {
@@ -76,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
     bottom: 5%;
     min-width: 30%;
     left: -2px;
-    background-color: #682149;
+    background-color: #188181;
 }
 
 .scale {
@@ -85,7 +178,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .author {
-    color: #F09D57;
+    color: white;
     margin: 4px;
     text-transform: uppercase;
 }
@@ -100,8 +193,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .masthead-text {
-    background-color: #44174E;
-    color:#F09D57;
+    background-color: #445261;
+    color: white;
     position: relative;
 }
 
@@ -117,21 +210,26 @@ h1, h2, h3, h4, h5, h6 {
     right: 90%;
     height: 100%;
     width: 150%;
-    background: #44174E;
+    background: #445261;
     -webkit-transform: skew(15deg);
     -moz-transform: skew(15deg);
     transform: skew(15deg);
     z-index: 100;
 }
 
+
+.profile-image {
+    width: 75%;
+}
+
 .post-link {
     text-decoration: none;
-    color: #E9BCB9;
+    color: #445261;
 }
 
 .post-link:hover,
 .page-link {
-    color: #F09D57;
+    color: #E84610;
 }
 
 .post-title {
@@ -141,19 +239,19 @@ h1, h2, h3, h4, h5, h6 {
 
 .post-subtitle {
     margin-left: 5%;
-    color: #F09D57
+    color: lightgray;
 }
 
 .btn-signup,
 .btn-edit {
-    background-color: #F09D57;
-    color: #1C1A32;
+    background-color: #188181;
+    color: #fff;
 }
 
 .btn-signup:hover,
 .btn-signup:active {
-    background-color: #1C1A32;
-    color: #44174E;
+    background-color: #fff;
+    color: #23BBBB;
 }
 
 .link {
@@ -191,4 +289,30 @@ h1, h2, h3, h4, h5, h6 {
 
 .approval {
     color: rgb(222, 146, 168);
+}
+
+@media (max-width: 767px) {
+    .navbar .container-fluid {
+        flex-direction: column;
+    }
+    .navbar .container-fluid > div:first-child {
+        width: 100%;
+    }
+    .navbar-brand {
+        margin-right: 0;
+    }
+    .navbar-toggler {
+        margin-left: auto;
+    }
+}
+
+@media (min-width: 768px) {
+    .navbar .navbar-brand {
+        position: absolute;
+        left: 0;
+        margin-left: 15px; /* Adjust as needed */
+    }
+    .navbar .text-center.w-100 {
+        text-align: left; /* Align text to the left */
+    }
 }
