--- a/templates/base.html
+++ b/templates/base.html
@@ -35,30 +35,54 @@
 <body class="d-flex flex-column h-100 main-bg">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg main-bg">
+    <nav class="navbar nav navbar-expand-md justify-content-center">
         <div class="container-fluid">
+            <!-- Logo section -->
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{%static 'images/logo.webp' %}" alt="LitRPG Library Logo" width="250" height="70">
-              </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <img src="{% static 'images/logo.webp' %}" alt="LitRPG Library Logo" width="250" height="70">
+            </a>
+            
+            <!-- Centered content wrapper -->
+            <div class="text-center w-100">
+                <button class="navbar-toggler mt-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbar-list-6" aria-controls="navbar-list-6" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="icon-bar top-bar"></span>
+                    <span class="icon-bar middle-bar"></span>
+                    <span class="icon-bar bottom-bar"></span>
+                </button>
+            </div>
+            
+            <!-- Navigation items -->
+            <div class="collapse navbar-collapse justify-content-end" id="navbar-list-6">
+                <span class="navbar-text text-muted">
+                    {% if user.is_authenticated %}
+                    <p class="mx-3">Logged in as {{ user }}.</p>
+                    {% else %}
+                    <p class="text-end mx-3">Not logged in.</p>
+                    {% endif %}
+                </span>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'review_list' %}">Reviews</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          User Menu
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            User Menu
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="{% url 'add_book' %}">Add Book</a></li>
-                          <li><a class="dropdown-item" href="{% url 'add_review' %}">Add Review</a></li>
-                          <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
-                          <li><a class="dropdown-item" href="#">Log Out</a></li>
+                            <li><a class="dropdown-item" href="{% url 'add_book' %}">Add Book</a></li>
+                            <li><a class="dropdown-item" href="{% url 'add_review' %}">Add Review</a></li>
+                            <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a></li>
                         </ul>
                     </li>
                     {% else %}
@@ -71,19 +95,10 @@
                             href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
-
                 </ul>
-                <span class="navbar-text text-muted">
-                    {% if user.is_authenticated %}
-                    <p class="text-end m-3">You are logged in as {{ user }}.</p>
-                    {% else %}
-                    <p class="text-end m-3">You are not logged in.</p>
-                    {% endif %}
-                </span>
             </div>
         </div>
     </nav>
-
     <!-- displaying Django messages -->
     <div class="container">
         <div class="row">
@@ -127,7 +142,7 @@
 
     {% block extras %}
     {% endblock %}
-    
+
 </body>
 
 </html>
